--- a/app-js/assets/stylesheets/includes/form.scss
+++ b/app-js/assets/stylesheets/includes/form.scss
@@ -7,5 +7,8 @@
   .react-datepicker__input-container {
     display: inline-block !important;
     margin: 0 10px 0 10px;
+    input {
+      width: 120px;
+    }
   }
 }
