--- a/app-js/assets/stylesheets/includes/common.scss
+++ b/app-js/assets/stylesheets/includes/common.scss
@@ -37,3 +37,11 @@ html, body, #app, #app > div {
 .footer, .page-wrap:after {
   height: 60px;
 }
+
+.banner {
+  padding: 120px 0;
+}
+
+.banner-sm {
+  padding: 50px 0;
+}
